fix other Marcello's notex. Only results to do

--- a/latex_thesis/bibliography.bib
+++ b/latex_thesis/bibliography.bib
@@ -144,3 +144,13 @@ howpublished={\url{https://afl-1.readthedocs.io/en/latest/motivation.html#the-af
 title={{Path Explosion}},
 howpublished={\url{https://en.wikipedia.org/wiki/Path_explosion}},
 }
+
+@misc{chataflgithub,
+  title={{Chatafl GitHub Repository}},
+  howpublished={\url{https://github.com/ChatAFLndss/ChatAFL/tree/master}},
+}
+
+@misc{chataflgithubprofuz,
+  title={{Chatafl GitHub ProFuzzBench}},
+  howpublished={\url{https://github.com/ChatAFLndss/ChatAFL/tree/master/benchmark}},
+}
