--- a/latex_thesis/parts/chapter2.tex
+++ b/latex_thesis/parts/chapter2.tex
@@ -14,7 +14,7 @@ Fuzzing methodologies vary and there exist a lot for different applications and 
     
     \item \textbf{White-box Fuzzing}: This is one of those techniques that rely heavily on source code intuition, such as control flow and data flow, to provide maximum \textit{code coverage} with test case generation ~\cite{grammarfuzzingwhitebox}.
     
-    \item \textbf{Grey-box Fuzzing}: It is a strategy that combines the various merits of \textit{black-box} and \textit{white-box fuzzing}. It brings in partial knowledge about internal application details and code coverage feedback guiding the generation of inputs. Grey-box fuzzing has become a widespread technique with the advent of \textbf{AFL} tool (\textit{American Fuzzy Lop} ~\cite{afl}), which has proved to be highly effective using coverage-guided fuzzing, as explained in \ref{sec:coverageguidedfuzzing}
+    \item \textbf{Grey-box Fuzzing}: It is a strategy that combines the various merits of \textit{black-box} and \textit{white-box fuzzing}. It brings in partial knowledge about internal application details and code coverage feedback guiding the generation of inputs. Grey-box fuzzing has become a widespread technique with the advent of \textbf{AFL} tool (\textit{American Fuzzy Lop} ~\cite{afl}), which has proved to be highly effective using coverage-guided fuzzing, as explained in Section \ref{sec:coverageguidedfuzzing}
 \end{itemize}
 
 \subsection{Fuzzing Inputs Generation}
@@ -144,7 +144,7 @@ The state model seems to be complex, but the state are effectively transitory.
     
     \item \textbf{CON\_STATE\_CLOSE}: The state when the connection is closed.
 \end{enumerate}
-In the \textit{CON\_STATE\_CONNECT} ther is no control of input, because it only changes when the connection is established.
+The \textit{CON\_STATE\_CONNECT} is reached just when the connection is established.
 \\The only stationary state could be the \textit{CON\_STATE\_READ}, because it is a loop that reads the request (i.e. if the request is sent line by line, it will loop into it).
 \\The other states are transitory because, ultimately, the connection will go back to \textit{CON\_STATE\_REQUEST\_START} or \textit{CON\_STATE\_CONNECT}.
 \\For this project, it has been chosen to model the state of the server based on the existence or non-existence of a resources. A resource can be a file, a directory, or any other entity that can be accessed via HTTP. By considering two types of state—a state \textit{s0}, where the resource does not exist and a state \textit{s1} where the resource exists—it can effectively explore different states of the server.
@@ -156,7 +156,7 @@ For the scope of this project, three stateful fuzzers—AFLNet, ChatAFL and Fall
  
 \subsection{AFLNet}
 AFLNet ~\cite{AFLNet} is a stateful CGF tool. It integrates automated state model inference with coverage-guided fuzzing, creating a synergistic relationship between the two processes. As fuzzing generates new message sequences to reach unexplored states, it progressively builds a more complete state model. Concurrently, this dynamically evolving state model helps guide fuzzing efforts towards more significant areas of the code, leveraging both state and code coverage information of the retained message sequences.
-\\AFLNet is implemented as an extension of the popular grey-box fuzzer AFL, with the additional capability of facilitating \textit{network communication} over sockets, which is not supported by the original AFL ~\cite{AFLNet}. To achieve this, AFLNet establishes two communication channels: one for sending messages to the SUT and another for receiving responses. The response-receiving channel acts as a state feedback channel, complementing the code coverage feedback channel utilized by other CGF tools. The communication is implemented using standard C Socket APIs and synchronization between AFLNet and the server is ensured by introducing delays between requests ~\cite{AFLNet}.
+\\AFLNet is implemented as an extension of the popular grey-box fuzzer AFL, with the additional capability of facilitating \textit{network communication} over sockets, which is not supported by the original AFL. To achieve this, AFLNet establishes two communication channels: one for sending messages to the SUT and another for receiving responses. The response-receiving channel acts as a state feedback channel, complementing the code coverage feedback channel utilized by other CGF tools. The communication is implemented using standard C Socket APIs and synchronization between AFLNet and the server is ensured by introducing delays between requests.
 \\AFLNet uses a \textit{prefix-based fuzzing} strategy, where the fuzzer maintains a prefix of the message sequence that has been successfully processed by the server. This prefix is used to guide the generation of new message sequences, ensuring that the fuzzer explores new states and code paths while maintaining the validity of the input.
 \\The seeds to AFLNet consists of \textit{pcap} files capturing network traffic, such as interactions between a client and server. A network sniffer, like \textit{tcpdump}, is used to capture realistic exchanges and a packet analyzer, such as Wireshark, can automatically extract the relevant message sequences. AFLNet uses a \textbf{Request Sequence Parser} to generate an initial corpus of message sequences by parsing these pcap files. It isolates individual client requests, discards the responses and identifies the beginning and end of each message, utilizing protocol-specific markers.
 \\The \textbf{State Machine Learner} component then augments the protocol state machine with newly observed states and transitions by analyzing server responses. AFLNet extracts status codes from server responses to identify and document new states and transitions. The \textbf{Target State Selector} leverages this information to determine which state the fuzzer should focus on next. This is done by applying several heuristics based on the statistical data gathered from the state machine, aiming to identify ``blind spots" or rarely exercised states and maximize the discovery of new state transitions.
@@ -199,19 +199,20 @@ Overall, this LLM-guided approach, as demonstrated in ChatAFL, represents a nove
 \subsection{Fallaway}
 Fallaway ~\cite{Fallaway} is a stateful fuzzer designed to address several key challenges faced by traditional fuzzers when handling stateful SUTs. Unlike stateless fuzzers such as AFL, which send single test cases and expect the SUT to terminate, Fallaway manages multiple states by incorporating a \textit{dual-loop} structure: an outer loop that selects the SUT state and an inner loop that sends multiple test cases for the chosen state. This approach helps maintain deliberate focus on specific states, prevents interference between states and ensures that progress in one state does not hinder progress in another.
 \\To achieve these objectives, Fallaway decouples the concepts of state scheduling and test case scheduling.
-The fuzzer has a \textbf{queue}, that is a scheduling algorithm that selects the next input to use based on different strategies like:
+The fuzzer has a \textbf{queue}, that is a scheduling algorithm that selects the next state to use based on different strategies like:
 \begin{itemize}
-    \item \textbf{Coverage-Yield (CY)} strategy, which uses a round-robin approach to select the next input to mutate.
-    \item \textbf{Outgoing Edges (OE)} strategy, which prioritizes inputs that exercise new edges in the program (this is done by using metadata that keeps track of the outgoing edges of each state in the program and selecting the input that exercises the most new edges).
+    \item \textbf{Coverage-Yield (CY)} strategy, which uses a round-robin approach to select the next state.
+    \item \textbf{Outgoing Edges (OE)} strategy, which selects states prioritizing the outgoing edges of the state model.
 \end{itemize} 
-Corpus and queue are used interchangeably, but they are not really the same thing. \\We can look at the queue as a mapping of the corpus within a scheduling algorithm to choose the next input to mutate.
-\\These are some examples of coverage-guided strategies:
+Corpus and queue are often used interchangeably, but they are not really the same thing. \\We can look at the queue as a mapping of the corpus within a scheduling algorithm to choose the next input to mutate.
+\\About test case and coverage map, they can be state aware or not. Being state aware means that they are specific to a state, otherwise they are shared across all states.
+\\Fallaway uses two different strategies to manage the corpus:
 \begin{itemize}
-    \item \textbf{Multiple Corpus Single Map (MCSM)}: This strategy uses a single coverage map to track the coverage of the program and multiple queues to store the inputs (is more efficient in terms of memory usage and faster in terms of execution time, but it is less effective in terms of coverage).
+    \item \textbf{Multiple Corpus Single Map (MCSM)}: This strategy uses a single coverage map, shared accross the states, to track the coverage of the program. It also uses multiple queues, one for each state, to store the inputs.
     
-    \item \textbf{Multiple Corpus Multiple Map (MCMM)}: This strategy uses multiple coverage maps to track the coverage of the program and multiple queues to store the inputs (is more effective in terms of coverage, but it is less efficient in terms of memory usage and slower in terms of execution time).
+    \item \textbf{Multiple Corpus Multiple Map (MCMM)}: This strategy uses multiple coverage maps, one for each state, to track the coverage of the program and multiple queues, one for each state, to store the inputs.
 \end{itemize}
-Each queue contains inputs that have allowed the fuzzer to reach a specific state of the program. The fuzzer uses a scheduler to select which input to mutate next based on the coverage achieved by the input.
+When the state scheduler choose a state, that specific queue will contains ``\textit{interesting}" inputs, that have allowed the fuzzer to achieve more coverage.
 \\For each state, a unique prefix is maintained along with a separate corpus of test cases, allowing focused exploration of the SUT's behavior within that state. Observations and feedback are also stored separately for each state, avoiding the problem of feedback contamination across different states. This strategy enables the fuzzer to maintain a clear distinction between the information gathered in each state, ensuring that the testing process remains unbiased and effective.
 \\Fallaway is built on the \textbf{LibAFL} ~\cite{libafl} framework, which is a modular library for developing fuzzers. To make LibAFL suitable for stateful SUTs, Fallaway extends its functionality in two key ways:
 \begin{enumerate}
